
MOD1 (2015-08-09) Jean-Pierre Haenlin * https://github.com/jphaenlin/Petri-Foo

	* enh github#1 : Ability to read loop points in the wav file
	* bug github#2 : Make EG times longer
	* enh github#3 : Suppress compilation errors with gcc 4.8.3
	* bug github#4 : Add a window and taskbar icon (gtk)
	* enh github#5 : Make EG sliders logarithmic
	* enh github#6 : Envelopes with exponential slope
	* bug github#7 : Bad behaviour of envelopes in mono mode without legato
	* enh github#8 : Display sample characteristics in sample select window
	* enh github#9 : Load last bank at startup
	* bug github#10: Window's title refresh after bank_save_as
	

2012-08-06 James Morris <james@jwm-art.net>

	* patch_set_and_get.c, lfopar_from_id: found nasty side
	  effect where an lfo id was calculated from a modulation
	  source id from within an assert... eeek!

	* gui/mod_section.[ch]: remove mod_section_set_list_*
	  these two functions were unused.

	* midi.c: replace some debug with errmsg.

	* patch_private/ move initialization of adsr parameters
	  from within patch_data.c to patch_voice.c

	* make building of "sandbox test code" into an option
	  no longer dependant on debug build.


2012-08-05 James Morris <james@jwm-art.net>

	* only get port data when auto-connect, plus
	  free data obtained.

	* don't resample audio files when JACK is not
	  running (for debug/test).

	* remove MODAL property from audio-settings
	  dialog.

	* #define NDEBUG so assert are disabled when
	  building for release.

2012-08-02 James Morris <james@jwm-art.net>

	* dish_file.c: call xmlFreeDoc on sucessful read.
	* dish_file.c: free str from xmlGetProp.
	* patch_voice.c: free voice data.
	* patch_data.c: call lfo_free on glfos.
	* patch_data.c: call sample_free.
	* patch_get_name return const char*.

2012-08-02 James Morris <james@jwm-art.net>

        * Petri-Foo 0.1.86

	* Always create session dir for new sessions.

	* Right justify help menu.

2012-07-29 James Morris <james@jwm-art.net>
