@@ -1,3 +1,7 @@
+MOD1.1 (in progress) Jean-Pierre Haenlin * https://github.com/jphaenlin/Petri-Foo
+
+	* enh github#11: Ability to have the root note outside of the min/max notes range
+
 
 MOD1 (2015-08-09) Jean-Pierre Haenlin * https://github.com/jphaenlin/Petri-Foo
 
